--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,15 @@
     android:layout_height="fill_parent"
     android:background="#000000"
     tools:context=".MainActivity">
+    
+    <View
+        android:id="@+id/tap_to_view_bounding_box"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="120dp"
+        />
 
     <elosoft.coinz.Components.TextEmitter
         android:id="@+id/tap_to_begin_emitter"
