--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="#000000"
-    tools:context=".MainActivity">
+    tools:context=".Activities.MainActivity">
     
     <View
         android:id="@+id/tap_to_view_bounding_box"
