--- a/app/src/main/res/layout/keyboard.xml
+++ b/app/src/main/res/layout/keyboard.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="90px">
+    android:padding="0dp">
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
@@ -176,6 +176,16 @@
             android:id="@+id/key_m"
             android:text="m"
             style="@style/key_text"/>
+
+        <TextView
+            android:id="@+id/key_left_carrot"
+            style="@style/key_text"
+            android:text="&lt;" />
+
+        <TextView
+            android:id="@+id/key_right_carrot"
+            style="@style/key_text"
+            android:text="&gt;" />
     </LinearLayout>
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
