--- a/app/src/main/res/layout/home_screen.xml
+++ b/app/src/main/res/layout/home_screen.xml
@@ -2,9 +2,9 @@
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <elosoft.coinz.Components.EightBitNavBar
+    <elosoft.coinz.Components.EightBitRetroNavBar
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-    </elosoft.coinz.Components.EightBitNavBar>
+    </elosoft.coinz.Components.EightBitRetroNavBar>
 </android.support.constraint.ConstraintLayout>
