Allowed switching screens through eight bit nav bar

--- a/app/src/main/res/layout/eight_bit_navbar.xml
+++ b/app/src/main/res/layout/eight_bit_navbar.xml
@@ -7,15 +7,15 @@
     android:orientation="horizontal">
 
     <ImageButton
-        android:id="@+id/nav_bar_home_button"
+        android:id="@+id/nav_bar_fortress"
         style="@style/nav_bar_icon"
         android:src="@drawable/icon_fortress" />
     <ImageButton
-        android:id="@+id/nav_bar_inventory_button"
+        android:id="@+id/nav_bar_trading_floor"
         android:src="@drawable/icon_gold_coin"
         style="@style/nav_bar_icon"/>
     <ImageButton
-        android:id="@+id/nav_bar_icon_bank"
+        android:id="@+id/nav_bar_bank"
         android:src="@drawable/icon_bank"
         style="@style/nav_bar_icon"/>
     <ImageButton
