--- a/app/src/main/res/layout/fortress.xml
+++ b/app/src/main/res/layout/fortress.xml
@@ -1,48 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <TextView
-        android:id="@+id/textView"
-        android:layout_width="27dp"
-        android:layout_height="30dp"
-        android:fontFamily="@font/eight_bit_body"
-        android:text="->"
-        android:textSize="24sp"
-        tools:layout_editor_absoluteX="217dp"
-        tools:layout_editor_absoluteY="175dp" />
-
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="166dp"
-        android:layout_height="30dp"
-        android:fontFamily="@font/eight_bit_body"
-        android:text="12.1234 GOLD"
-        android:textSize="24sp"
-        tools:layout_editor_absoluteX="244dp"
-        tools:layout_editor_absoluteY="175dp" />
-
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="117dp"
-        android:layout_height="30dp"
-        android:fontFamily="@font/eight_bit_body"
-        android:text="16 PNNY"
-        android:textSize="24sp"
-        tools:layout_editor_absoluteX="101dp"
-        tools:layout_editor_absoluteY="175dp" />
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="384dp"
-        android:layout_height="42dp"
-        android:fontFamily="@font/eight_bit_headline"
+        android:id="@+id/fortress_title"
         android:text="The Fortress"
-        android:textColor="@color/orange"
-        android:textSize="25sp"
-        tools:layout_editor_absoluteX="26dp"
-        tools:layout_editor_absoluteY="108dp" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        style="@style/title_text" />
+    <elosoft.coinz.Components.TextEmitter
+        android:id="@+id/fortress_welcome_message"
+        app:layout_constraintTop_toBottomOf="@id/fortress_title"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:displayText="Welcome sire. There are still coinz available to collect today."
+        app:displayRate="50"
+        style="@style/welcome_message" />
+    <TextView
+        android:id="@+id/fortress_pnny_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="200dp"
+        android:text="16 PNNY   -> 01.3453 GOLD"
+        style="@style/text_body" />
+    <TextView
+        android:id="@+id/fortress_dolr_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        app:layout_constraintTop_toBottomOf="@id/fortress_pnny_text"
+        android:text="07 DOLR   ->   11.2121 GOLD"
+        style="@style/text_body" />
+    <TextView
+        android:id="@+id/fortress_deposit_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        app:layout_constraintTop_toBottomOf="@id/fortress_dolr_text"
+        android:layout_marginTop="60dp"
+        android:text="15/25 Coinz Deposited Today"
+        style="@style/text_body" />
+    <TextView
+        android:id="@+id/fortress_coins_found_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        app:layout_constraintTop_toBottomOf="@id/fortress_deposit_text"
+        android:text="25/50 Coinz Found Today"
+        style="@style/text_body" />
 </android.support.constraint.ConstraintLayout>
