--- a/app/src/main/res/layout/map.xml
+++ b/app/src/main/res/layout/map.xml
@@ -11,5 +11,18 @@
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginTop="50dp"/>
+        android:layout_marginTop="50dp"
+        android:visibility="invisible"/>
+    <elosoft.coinz.Components.TextEmitter
+        android:id="@+id/opening_map_emitter"
+        android:layout_width="0dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_height="350dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:displayText=". . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .  %n This is taking longer than usual. %n PLEASE WAIT . . . "
+        app:displayRate="50"/>
 </android.support.constraint.ConstraintLayout>
