--- a/app/src/main/res/layout/map.xml
+++ b/app/src/main/res/layout/map.xml
@@ -25,4 +25,19 @@
         app:layout_constraintRight_toRightOf="parent"
         app:displayText=". . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .  %n This is taking longer than usual. %n PLEASE WAIT . . . "
         app:displayRate="50"/>
+
+    <Button
+        android:id="@+id/collect_coinz_button"
+        android:layout_marginLeft="40dp"
+        android:layout_marginRight="40dp"
+        android:layout_marginBottom="40dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="@drawable/button_background"
+        android:fontFamily="@font/eight_bit_body"
+        android:text="collect coinz"
+        android:textColor="@color/colorPrimary"
+        android:textSize="18sp"
+        android:visibility="gone"/>
 </android.support.constraint.ConstraintLayout>
