--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -56,4 +56,33 @@
         <item name="android:textSize">18sp</item>
         <item name="android:textColor">#FFF</item>
     </style>
+
+    <style name="text_body.fortress_coin_name">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:gravity">center</item>
+        <item name="android:layout_marginLeft">45dp</item>
+        <item name="android:layout_marginTop">40dp</item>
+    </style>
+
+    <style name="text_body.fortress_arrow">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_marginTop">20dp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
+
+    <style name="text_body.fortress_coin_amount">
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginTop">20dp</item>
+        <item name="android:layout_marginLeft">80dp</item>
+        <item name="android:layout_width">wrap_content</item>
+    </style>
+
+    <style name="text_body.fortress_gold_amount">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginTop">20dp</item>
+        <item name="android:layout_marginRight">40dp</item>
+    </style>
 </resources>
