--- a/app/src/main/res/layout/fortress.xml
+++ b/app/src/main/res/layout/fortress.xml
@@ -106,4 +106,17 @@
         style="@style/text_body.fortress_gold_amount"
         app:layout_constraintTop_toTopOf="@id/fortress_quid_text"
         app:layout_constraintRight_toRightOf="parent" />
+    <Button
+        android:id="@+id/view_collected_coinz_button"
+        android:layout_marginLeft="40dp"
+        android:layout_marginRight="40dp"
+        android:layout_marginBottom="40dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="@drawable/button_background"
+        android:fontFamily="@font/eight_bit_body"
+        android:text="view collected coinz"
+        android:textColor="@color/colorPrimary"
+        android:textSize="18sp" />
 </android.support.constraint.ConstraintLayout>
