--- a/app/src/main/res/layout/bank.xml
+++ b/app/src/main/res/layout/bank.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
 
@@ -19,4 +20,36 @@
         app:displayText="Welcome to the bank my lord. %n Would you like to make a deposit?"
         app:displayRate="20"
         style="@style/welcome_message" />
+
+    <ImageView
+        android:id="@+id/bank_gold_coin_image"
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
+        app:layout_constraintTop_toTopOf="@id/bank_title"
+        android:layout_marginTop="100dp"
+        android:src="@drawable/icon_gold_coin_large" />
+
+    <TextView
+        android:id="@+id/bank_gold_coin_amount"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/bank_gold_coin_image"
+        android:layout_marginTop="20dp"
+        android:gravity="center"
+        android:text="0.00000 GOLD"
+        style="@style/text_body"/>
+
+    <Button
+        android:id="@+id/bank_deposit_button"
+        android:layout_marginLeft="40dp"
+        android:layout_marginRight="40dp"
+        android:layout_marginBottom="40dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="@drawable/button_background"
+        android:fontFamily="@font/eight_bit_body"
+        android:text="make a deposit"
+        android:textColor="@color/colorPrimary"
+        android:textSize="18sp" />
 </android.support.constraint.ConstraintLayout>
