--- a/app/src/main/res/layout/coin_grid_cell.xml
+++ b/app/src/main/res/layout/coin_grid_cell.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/coin_layout"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
@@ -8,8 +9,8 @@
 
     <FrameLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-
+        android:layout_height="wrap_content"
+        android:paddingTop="10dp">
 
         <ImageView
             android:id="@+id/coin_grid_cell_coin_icon"
@@ -22,6 +23,18 @@
 
     <TextView
         style="@style/text_body"
+        android:id="@+id/textview_coin_type"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="PENY"
+        android:textSize="15dp"
+        android:paddingTop="4dp"
+        android:paddingLeft="8dp"
+        android:paddingRight="8dp"
+        android:gravity="center_horizontal"/>
+
+    <TextView
+        style="@style/text_body"
         android:id="@+id/textview_coin_value"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -30,6 +43,5 @@
         android:paddingLeft="8dp"
         android:paddingRight="8dp"
         android:gravity="center_horizontal"/>
-
 
 </LinearLayout>
