--- a/app/src/main/res/layout/coinz_view.xml
+++ b/app/src/main/res/layout/coinz_view.xml
@@ -7,6 +7,7 @@
 
     <GridView
         android:id="@+id/coinz_grid"
+        android:listSelector="@android:color/transparent"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:numColumns="4"
