Added tradeing UI and database access

--- a/app/src/main/res/layout/trading_floor.xml
+++ b/app/src/main/res/layout/trading_floor.xml
@@ -19,4 +19,18 @@
         app:displayText="The markets are looking good today. Why not make a trade."
         app:displayRate="20"
         style="@style/welcome_message" />
+
+    <Button
+        android:id="@+id/trading_floor_trade_button"
+        android:layout_marginLeft="40dp"
+        android:layout_marginRight="40dp"
+        android:layout_marginBottom="40dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="@drawable/button_background"
+        android:fontFamily="@font/eight_bit_body"
+        android:text="make a trade"
+        android:textColor="@color/colorPrimary"
+        android:textSize="18sp" />
 </android.support.constraint.ConstraintLayout>
