--- a/app/src/main/res/layout/loading.xml
+++ b/app/src/main/res/layout/loading.xml
@@ -18,12 +18,12 @@
     <elosoft.coinz.Components.TextEmitter
         android:id="@+id/loading_emitter"
         android:layout_width="0dp"
+        android:background="@drawable/white_border"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginTop="100dp"
-        android:layout_height="match_parent"
+        android:layout_height="300dp"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:displayText="BOOTING UP COINZOS . . . %n ***64K OF RAM INSTALLED*** %n ***30199 BYTES FREE*** %n Coinz (R) Operating System Version 1.43 %n %n DIR %n %n >>> COINZ.exe %n >>> HOMEWORK.txt %n >>> user_file.txt %n %n RUN COINZ.exe --network-enabled --as-user user-file.txt %n %n LOADING . . ."
