--- a/app/src/main/res/layout/trade_list_cell.xml
+++ b/app/src/main/res/layout/trade_list_cell.xml
@@ -4,11 +4,11 @@
     android:orientation="vertical"
     android:padding="10dp"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="300dp"
     android:background="@drawable/white_border">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_weight="1"
         android:orientation="horizontal">
         <TextView
@@ -28,7 +28,7 @@
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_weight="1"
         android:orientation="horizontal">
         <TextView
@@ -53,15 +53,37 @@
         android:text="Text Status"
         android:textSize="12dp"
         style="@style/text_body"/>
-    <Button
-        android:id="@+id/list_button"
-        android:visibility="invisible"
-        android:layout_gravity="right"
-        android:layout_width="200dp"
-        android:layout_height="30dp"
-        android:background="@drawable/button_background"
-        android:fontFamily="@font/eight_bit_body"
-        android:text="deposit gold"
-        android:textColor="@color/colorPrimary"
-        android:textSize="18sp" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
+        android:layout_weight="1"
+        android:orientation="horizontal">
+        <Button
+            android:id="@+id/list_button_2"
+            android:visibility="invisible"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="40dp"
+            android:layout_margin="5dp"
+            android:layout_marginLeft="0dp"
+            android:background="@drawable/button_background"
+            android:fontFamily="@font/eight_bit_body"
+            android:text="approve"
+            android:textColor="@color/colorPrimary"
+            android:textSize="18sp" />
+        <Button
+            android:id="@+id/list_button_1"
+            android:visibility="invisible"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="40dp"
+            android:layout_margin="5dp"
+            android:layout_marginRight="0dp"
+            android:background="@drawable/button_background"
+            android:fontFamily="@font/eight_bit_body"
+            android:text="deny"
+            android:textColor="@color/colorPrimary"
+            android:textSize="18sp" />
+    </LinearLayout>
+
 </LinearLayout>
