--- a/app/src/main/res/layout/activity_deposit_coinz.xml
+++ b/app/src/main/res/layout/activity_deposit_coinz.xml
@@ -5,14 +5,28 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <ImageButton
+        android:id="@+id/exit_button"
+        style="@style/nav_bar_icon"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginTop="5dp"
+        android:scaleType="center"
+        android:src="@drawable/icon_exit"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <elosoft.coinz.Components.TextEmitter
         android:id="@+id/d_coinz_emitter_coinz_emitter"
+        android:background="@drawable/white_border"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="20dp"
+        android:layout_height="120dp"
+        android:layout_marginTop="40dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        android:layout_marginBottom="100dp"
+        android:layout_marginBottom="10dp"
+        app:layout_constraintTop_toTopOf="parent"
         app:displayText=""
         app:displayRate="10"/>
 
