--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,12 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="#000000"
-    tools:context=".Activities.MainActivity">
+    android:background="#000000">
 
     <elosoft.coinz.Components.TextEmitter
         android:id="@+id/tap_to_begin_emitter"
-        android:layout_width="210dp"
+        android:layout_width="220dp"
         android:layout_height="30dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -40,7 +39,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="120dp"
         />
-
     <TextView
         android:id="@+id/copyright_notice"
         android:layout_width="wrap_content"
@@ -49,17 +47,6 @@
         android:text="Copyright Elosoft 2018"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginLeft="30dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="30dp" />
-
-    <ImageButton
-        android:id="@+id/imageButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/icon_settings_wheel"
-        android:background="#0000"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginRight="30dp"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="30dp" />
 
